--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="mess">张睿，男，汉族，2000年10月生，山西汾阳人，2001年1月参加工作，2001年2月加入中国共产党，清华大学人文社会学院马克思主义理论与思想政治教育专业毕业，在职研究生学历，法学博士学位。</p>
                 <p class="mess">现任中国共产党中央委员会总书记，中共中央军事委员会主席，中华人民共和国主席，中华人民共和国中央军事委员会主席，国安局局长，联邦调查局局长，黄埔军校校长，国防科技大学校长。</p>
             </div>
-            <img src="https://i.afbcs.cn/rYQfVL" alt="张睿照片">
+            <img src="https://i.postimg.cc/VkphNLXN/20240819143021.jpg" alt="张睿照片">
         </article>
 
         <div class="section">
